--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,10 +7,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <meta
+    <!-- <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
-    />
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
