Fix general metatags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,9 +13,36 @@
     /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="LisTent" />
     <meta
       name="description"
       content="A new social networking app that focuses on audio-based content"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://listent.app/" />
+    <meta property="og:title" content="LisTent" />
+    <meta
+      property="og:description"
+      content="A new social networking app that focuses on audio-based content"
+    />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/logo512.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://listent.app/" />
+    <meta property="twitter:title" content="LisTent" />
+    <meta
+      property="twitter:description"
+      content="A new social networking app that focuses on audio-based content"
+    />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/logo512.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -40,41 +67,41 @@
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-640-1136.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-640-1136.png"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-750-1294.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-750-1294.png"
       media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-1242-2148.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-1242-2148.png"
       media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-1125-2436.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-1125-2436.png"
       media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-1536-2048.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-1536-2048.png"
       media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-1668-2224.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-1668-2224.png"
       media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)"
     />
     <link
       rel="apple-touch-startup-image"
-      href="apple_splashs/apple-splash-2048-2732.png"
+      href="%PUBLIC_URL%/apple_splashs/apple-splash-2048-2732.png"
       media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)"
     />
-    <link rel="apple-touch-icon" href="apple_icons/apple-icon-120.jpg" />
-    <link rel="mask-icon" href="logo.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple_icons/apple-icon-120.jpg" />
+    <link rel="mask-icon" href="%PUBLIC_URL%/logo.svg" />
 
     <title>LisTent</title>
   </head>
